 - Draws proper polygons for ships instead of approximations like old system
 - Will fall back to approximations on ships that can't be triangulated (only
   Paragon in vanilla and a handful of ships in existing mods)
 - To draw ships as triangles instead like with the old ShipSimpleRenderer,
   change "simpleMode" to true in radar_settings.json under "shipRenderer"
New utility class: DrawQueue
 - Aids in efficiently drawing many primitive shapes multiple frames in a row
 - Handles native buffer allocation/data/resizing automatically
 - Uses VBOs if the user's card supports them (hint: it does)
All interfaces are now fully documented (see javadoc.zip in mod folder)
Miscellaneous optimizations and improvements

 1.1f (March 06, 2015)
=======================
Fixed a bug that caused intermittent radar corruption in the campaign
Lines and points on the radar should look much sharper now (thanks Alex)

 1.1e (February 12, 2015)
==========================
Stations and planets with the "comm_relay" tag aren't considered relays
The campaign radar won't draw anything with the tag "radar_nodraw"

 1.1d (December 09, 2014)
==========================
Hopefully fixed a bug where campaign radar components would occasionally vanish

 1.1c (December 03, 2014)
==========================
The radar is no longer drawn over menus or when the HUD is turned off
Greatly increased the speed of the battle progress bar animation
Fixed crash in ShipPolygonRenderer when rendering ships that lack bounds
Radar no longer reactivates when the player's ship is fully destroyed

 1.1b (October 23, 2014)
=========================
Campaign fleet renderer changes:
 - Fleets are only colored red if they are hostile towards the player
Battle progress bar changes:
 - Doesn't show initial relative fleet strengths in a simulation battle
 - Ignores ships still in picker in simulation battles
 - Doesn't count the reserves of a fleet in full retreat

 1.1 (October 21, 2014)
========================